# files

./: .travis.yml  meson.build
libcore/: AbstractSidebar.vala  CMakeLists.txt  DndHandler.vala  TreeItem.vala  TreeStore.vala  UndoManager.vala  marlin-file-operations.c  pantheon-files-core-C.vapi
plugins/: CMakeLists.txt  meson.build
plugins/pantheon-files-cloud/: CMakeLists.txt  meson.build  pantheon-files-cloud.plug  plugin.vala
plugins/pantheon-files-cloud/src/: CloudManager.vala  plugin.vala
plugins/pantheon-files-cloudproviders/: CMakeLists.txt  plugin.vala
src/: TextRenderer.vala
src/View/: AbstractDirectoryView.vala  PopupMenuBuilder.vala  Sidebar.vala
src/View/Widgets/: HeaderBar.vala
vapi/: cloudproviders.vapi
